tests/baselines/reference/optionsOutAndNoModuleGen.errors.txt
error TS1390: The `bundledPackageName` option must be provided when using outFile and node module resolution with declaration emit.
tests/cases/compiler/optionsOutAndNoModuleGen.ts(1,1): error TS6131: Cannot compile modules using option 'out' unless the '--module' flag is 'amd' or 'system'.


!!! error TS1390: The `bundledPackageName` option must be provided when using outFile and node module resolution with declaration emit.
==== tests/cases/compiler/optionsOutAndNoModuleGen.ts (1 errors) ====
    export var x = 10;
    ~~~~~~~~~~~~~~~~~~
!!! error TS6131: Cannot compile modules using option 'out' unless the '--module' flag is 'amd' or 'system'.